syntax = "proto3";

package pb;
option go_package=".;pb";

message JoinRequest {
    string node_name = 1;
    string token = 2;
    string cloud_address = 3;
}

message JoinResponse {
    int32 code = 1;
    string msg = 2;
    string vk_url = 3;//云端创建了ingress,返回的路由路径,通过这个建立websocket连接
}


message ResetRequest {
    string node_name = 1;
}

message ResetResponse {
    int32 code = 1;
    string msg = 2;
}

service Edgelet {

    rpc Join(JoinRequest) returns(JoinResponse);

    rpc Reset(ResetRequest) returns(ResetResponse);
}
